--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Cache-Control" content="no-cache">
     <link rel="icon" href="img/icon.png">
     <title>Podcast Web App Template</title>
     <!--CSS-->
@@ -42,7 +43,7 @@
         </div>
     </header>
 
-    <section class="wow fadeIn">
+    <section>
         <div class="container wrap user-podcast__wrap">
             <div class="row">
                 <div class="col-xs-12">
@@ -55,9 +56,9 @@
 
             </div>
         </div>
-    </section class="last-podcast">
+    </section>
 
-    <section class="wow fadeIn">
+    <section>
         <div class="container wrap last-podcast__wrap">
             <div class="row">
                 <div class="col-xs-12">
@@ -66,7 +67,7 @@
                     </h2>
                 </div>
             </div>
-            <div class="row js-last-podcast">
+            <div class="row top-xs js-last-podcast">
 
             </div>
         </div>
