--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,700,800,900');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
+// @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,500&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic');
 
 @import 'media';
 @import 'fontello';
 
 /* Fonts */
 @header-font: 'Montserrat', sans-serif;
-@logo-font: 'Roboto Condensed', sans-serif; 
+@text-font: 'Roboto', sans-serif;
 /* Fonts */
 
 /* Colors */
@@ -15,7 +16,7 @@
 @block-color: #282b35;
 @highlight-color_secondary: #009cff;
 @highlight-color_primary: #e46a68;
-@border-radius: 10px;
+@border-radius: 15px;
 
 // @text-color: #383838;
 // @bg-color: #f5f7fc;
@@ -49,16 +50,23 @@ body{
 .podcast-app{
     &__title{
         font-family: @header-font;
-        font-weight: 500;
+        font-weight: 700;
         color: @text-color;
-        font-size: 24px;
+        font-size: 28px;
+        margin: 35px 0px;
     
         @media @tablet {
-            font-size: 26px;
+            font-size: 30px;
+            margin: 50px 0px;
         }
     
         @media @desktop {
-            font-size: 28px;
+            font-size: 32px;
+        }
+
+        &:after {
+            content: '.';
+            color: @highlight-color_primary;
         }
     }
 }
@@ -187,22 +195,6 @@ body{
             padding-bottom: 10px;
         } 
     }
-
-    &__title{
-        font-family: @header-font;
-        font-weight: 500;
-        color: @text-color;
-        font-size: 24px;
-    
-        @media @tablet {
-            font-size: 26px;
-        }
-    
-        @media @desktop {
-            font-size: 28px;
-        }
-    }
-
     &-item{
         height: 100%;
         background-color: @block-color;
@@ -223,6 +215,10 @@ body{
         }
 
         &__title{
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical; 
             font-family: @header-font;
             font-weight: 700;
             color: @text-color;
@@ -230,17 +226,21 @@ body{
             font-size: 19px;
         
             @media @tablet {
-                font-size: 22px;
+                font-size: 19px;
             }
         
             @media @desktop {
-                font-size: 23px;
+                font-size: 20px;
             }
         }
 
         &__description{
-            font-family: @header-font;
-            font-weight: 300;
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            font-family: @text-font;
+            font-weight: 400;
             color: @text-color;
             font-size: 14px;
             line-height: 20px;
@@ -265,7 +265,7 @@ body{
 
         &__logo{
             width: 90%;
-            border-radius: @border-radius;
+            border-radius: 50%;
 
             @media @tablet {
                 width: 100%;
@@ -307,18 +307,21 @@ body{
         }
 
         &__title{
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical; 
             font-family: @header-font;
             font-weight: 700;
             color: @text-color;
             font-size: 19px;
             margin: 0px;
-        
             @media @tablet {
-                font-size: 22px;
+                font-size: 19px;
             }
         
             @media @desktop {
-                font-size: 23px;
+                font-size: 20px;
             }
         }
 
@@ -353,7 +356,7 @@ body{
 
         &__logo{
             width: 90%;
-            border-radius: @border-radius;
+            border-radius: 50%;
 
             @media @tablet {
                 width: 100%;
@@ -386,20 +389,47 @@ body{
         }
 
         &__content{
-            font-family: @header-font;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;  
+            text-overflow: ellipsis;
+            overflow: hidden;
+
+            margin: 20px 0px;
+            font-family: @text-font;
             color: @text-color;
-            font-weight: 300;
+            font-weight: 400;
             line-height: 20px;
-            font-size: 14px;
+            font-size: 15px;
 
             & a{
                 color: @text-color;
             }
 
             & img{
-                width: 100px;
-                border-radius: @border-radius;
+                display: none;
             }
+
+            & em{
+                display: none;
+            }
+
+            & audio{
+                display: none;
+            }
+
+            & p{
+                margin: 0px;
+            }
+
+            & ul{
+                padding-left: 20px;
+                white-space: nowrap;
+                overflow: hidden; 
+                text-overflow: ellipsis;
+            }
+
+
         }
 
         &__player-wrap{
