--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,12 +8,18 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <link rel="icon" href="img/icon.png">
     <title>Podcast Web App Template</title>
+
+    <% 
+        const date = new Date(); 
+        timestamp = date.getTime();
+    %>
+
     <!--CSS-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css?v=<%= timestamp %>" type="text/css">
     <!--CSS-->
 </head>
 <body>
@@ -72,11 +78,22 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container wrap">
+            <div class="row start-xs">
+                <div class="col-xs-12">
+                    <p class="footer__text">
+                        &copy; 2019
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!--JavaScript-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=<%= timestamp %>"></script>
     <!--JavaScript-->
 </body>
 </html>
