--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,700,800,900');
-// @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Serif:400,500&subset=cyrillic');
 @import url('https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic');
 
 @import 'media';
@@ -57,7 +56,7 @@ body{
     
         @media @tablet {
             font-size: 30px;
-            margin: 50px 0px;
+            margin: 55px 0px;
         }
     
         @media @desktop {
@@ -82,6 +81,10 @@ body{
 .plyr--audio .plyr__control.plyr__tab-focus, .plyr--audio .plyr__control:hover, .plyr--audio .plyr__control[aria-expanded=true]{
     background: none;
     outline: none;
+}
+
+.plyr__control.plyr__tab-focus{
+    box-shadow: none;
 }
 
 .plyr--full-ui input[type=range]{
@@ -292,6 +295,7 @@ body{
     }
 
     &-item{
+        position: relative;
         background-color: @block-color;
         border-radius: @border-radius;
         box-sizing: border-box;
@@ -337,6 +341,23 @@ body{
             }
         
             @media @desktop {
+                font-size: 12px;
+            }
+        }
+
+        &__new-label{
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            border: 2px solid #21ba45;
+            border-radius: 6px;
+            padding: 2px 10px;
+            color: #21ba45;
+            font-weight: 600;
+            font-size: 11px;
+            font-family: @text-font;
+        
+            @media @tablet {
                 font-size: 12px;
             }
         }
@@ -438,3 +459,28 @@ body{
     }
 }
 /* last-podcast */
+
+/* footer */
+.footer{
+    background-color: @block-color;
+    margin-top: 45px;
+    padding: 20px 0px;
+    font-size: 15px;
+
+    @media @tablet {
+        font-size: 15px;
+        margin-top: 60px;
+    }
+    @media @desktop {
+        font-size: 16px;
+        margin-top: 70px;
+    } 
+
+    &__text{
+        font-family: @header-font;
+        color: @text-color;
+        font-weight: 700;
+        margin: 0px;
+    }
+}
+/* footer */
