--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,8 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Cache-Control" content="no-cache">
+    <meta name="theme-color" content="#151720">
     <link rel="icon" href="img/icon.png">
-    <title>Podcast Web App Template</title>
+    <title>Podcast Web App</title>
 
     <% 
         const date = new Date(); 
@@ -28,7 +29,7 @@
             <div class="row middle-xs">
                 <div class="col-xs-6 start-xs ">
                     <h2 class="header__title">
-                        Podcast Web App Template
+                        Podcast Web App
                     </h2>
                 </div>
                 <div class="col-xs-6">
@@ -89,8 +90,9 @@
             </div>
         </div>
     </footer>
+    <div class="notifications">
+    </div>
     <!--JavaScript-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
     <script src="js/main.js?v=<%= timestamp %>"></script>
