--- a/src/less/main.less
+++ b/src/less/main.less
@@ -16,6 +16,7 @@
 @highlight-color_secondary: #009cff;
 @highlight-color_primary: #e46a68;
 @border-radius: 15px;
+@box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 
 // @text-color: #383838;
 // @bg-color: #f5f7fc;
@@ -51,16 +52,16 @@ body{
         font-family: @header-font;
         font-weight: 700;
         color: @text-color;
-        font-size: 28px;
+        font-size: 26px;
         margin: 35px 0px;
     
         @media @tablet {
-            font-size: 30px;
+            font-size: 29px;
             margin: 55px 0px;
         }
     
         @media @desktop {
-            font-size: 32px;
+            font-size: 30px;
         }
 
         &:after {
@@ -147,7 +148,7 @@ body{
             border: 2px solid @block-color;
             height: 10px;
             width: 10px;
-            background-color: #8ac176;
+            background-color: #21ba45;
             border-radius: 50%;
         }
     }
@@ -157,6 +158,7 @@ body{
         height: 40px;
         border-radius: 50%;
         margin-left: 17px;
+        box-shadow: @box-shadow;
 
         @media @tablet {
             width: 50px;
@@ -220,34 +222,37 @@ body{
         &__title{
             display: -webkit-box;
             overflow: hidden;
-            -webkit-line-clamp: 2;
+            -webkit-line-clamp: 3;
             -webkit-box-orient: vertical; 
             font-family: @header-font;
             font-weight: 700;
             color: @text-color;
             margin: 0px;
-            font-size: 19px;
+            font-size: 16px;
         
             @media @tablet {
-                font-size: 19px;
+                font-size: 18px;
             }
         
             @media @desktop {
-                font-size: 20px;
+                font-size: 19px;
             }
         }
 
         &__description{
             display: -webkit-box;
             overflow: hidden;
-            -webkit-line-clamp: 1;
+            -webkit-line-clamp: none;
             -webkit-box-orient: vertical;
             font-family: @text-font;
             font-weight: 400;
             color: @text-color;
             font-size: 14px;
             line-height: 20px;
-        
+
+            @media @tablet {
+                -webkit-line-clamp: 1;
+            }
             @media @desktop {
                 font-size: 15px;
             }
@@ -259,20 +264,13 @@ body{
             font-weight: 500;
             text-decoration: none;
             color: #6B7282;
-            font-size: 10px;
-        
-            @media @desktop {
-                font-size: 12px;
-            }
+            font-size: 12px;
         }
 
         &__logo{
-            width: 90%;
+            width: 100%;
             border-radius: 50%;
-
-            @media @tablet {
-                width: 100%;
-            }
+            box-shadow: @box-shadow;
         }
     }
 }
@@ -313,19 +311,21 @@ body{
         &__title{
             display: -webkit-box;
             overflow: hidden;
-            -webkit-line-clamp: 2;
+            -webkit-line-clamp: 3;
             -webkit-box-orient: vertical; 
             font-family: @header-font;
             font-weight: 700;
             color: @text-color;
-            font-size: 19px;
             margin: 0px;
+            font-size: 16px;
+
             @media @tablet {
-                font-size: 19px;
+                font-size: 18px;
+                -webkit-line-clamp: 2;
             }
         
             @media @desktop {
-                font-size: 20px;
+                font-size: 19px;
             }
         }
 
@@ -333,15 +333,16 @@ body{
             font-family: @header-font;
             font-weight: 500;
             color: #6b7282;
-            font-size: 10px;
+            line-height: 15px;
             margin: 5px 0px;
+            font-size: 12px;
 
             @media @tablet {
-                font-size: 11px;
+                font-size: 13px;
             }
         
             @media @desktop {
-                font-size: 12px;
+                font-size: 13px;
             }
         }
 
@@ -376,12 +377,9 @@ body{
         }
 
         &__logo{
-            width: 90%;
+            width: 100%;
             border-radius: 50%;
-
-            @media @tablet {
-                width: 100%;
-            }
+            box-shadow: @box-shadow;
         }
 
         &__wrap{
@@ -411,7 +409,7 @@ body{
 
         &__content{
             display: -webkit-box;
-            -webkit-line-clamp: 3;
+            -webkit-line-clamp: 5;
             -webkit-box-orient: vertical;  
             text-overflow: ellipsis;
             overflow: hidden;
@@ -422,6 +420,10 @@ body{
             font-weight: 400;
             line-height: 20px;
             font-size: 15px;
+
+            @media @tablet {
+                -webkit-line-clamp: 3;
+            }
 
             & a{
                 color: @text-color;
@@ -449,8 +451,6 @@ body{
                 overflow: hidden; 
                 text-overflow: ellipsis;
             }
-
-
         }
 
         &__player-wrap{
@@ -484,3 +484,72 @@ body{
     }
 }
 /* footer */
+
+/* notifications */
+.notifications{
+    position: relative;
+}
+
+.notification{
+    position: fixed;
+    z-index: 1000;
+    display: none;
+    align-items: center;
+    flex-direction: row;
+    right: 15px;
+    top: 20px;
+    width: 300px;
+    background-color: @block-color;
+    padding: 20px;
+    border-radius: @border-radius;
+    box-sizing: border-box;
+    box-shadow: @box-shadow;
+
+    &__marker {
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        height: 15px;
+        width: 15px;
+        background-color: #21ba45;
+        border-radius: 50%;
+    }
+
+    @media @tablet {
+        right: 20px;
+        top: 100px;
+        width: 350px;
+    }
+
+    &__logo{
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        box-shadow: @box-shadow;
+    }
+
+    &__content{
+        padding-left: 14px;
+    }
+
+    &__text{
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical; 
+        font-family: @header-font;
+        font-size: 15px;
+        color: @text-color;
+        font-weight: 500px;
+        margin: 4px 0px;
+    }
+
+    &__date{
+        font-family: @header-font;
+        font-size: 13px;
+        color: #6b7282;
+        font-weight: 500px;
+        margin: 3px 0px;
+    }
+}
+/* notifications */
