add release calendar

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -79,6 +79,22 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="container wrap calendar__wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="podcast-app__title">
+                        Release calendar
+                    </h2>
+                </div>
+            </div>
+            <div class="js-calendar">
+
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container wrap">
             <div class="row start-xs">
@@ -90,7 +106,8 @@
             </div>
         </div>
     </footer>
-    <div class="notifications">
+
+    <div class="notifications js-notifications">
     </div>
     <!--JavaScript-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
