--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,10 +17,7 @@
 @highlight-color_primary: #e46a68;
 @border-radius: 15px;
 @box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-
-// @text-color: #383838;
-// @bg-color: #f5f7fc;
-// @block-color: #ffffff;
+@notification-box-shadow: 0 2px 38px -12px rgba(0, 0, 0, 0.56), 0 -2px 25px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 /* Colors */
 
 body{
@@ -96,6 +93,7 @@ body{
 /* header */
 .header{
     background-color: @block-color;
+    box-shadow: @box-shadow;
 
     &__wrap{
         padding: 10px 10px;
@@ -167,13 +165,13 @@ body{
     }
 
     &__name{
-        visibility: hidden;
+        display: none;
         font-family: @header-font;
         font-weight: 500;
         color: @text-color;
     
         @media @tablet {
-            visibility: visible;
+            display: block;
             font-size: 12px;
         }
     
@@ -496,17 +494,18 @@ body{
     display: none;
     align-items: center;
     flex-direction: row;
+    bottom: 15px;
     right: 15px;
-    top: 20px;
     width: 300px;
     background-color: @block-color;
-    padding: 20px;
+    padding: 14px;
     border-radius: @border-radius;
     box-sizing: border-box;
-    box-shadow: @box-shadow;
+    box-shadow: @notification-box-shadow;
 
     &__marker {
         position: absolute;
+        z-index: 1100;
         top: 6px;
         left: 6px;
         height: 15px;
@@ -517,8 +516,8 @@ body{
 
     @media @tablet {
         right: 20px;
-        top: 100px;
         width: 350px;
+        padding: 20px;
     }
 
     &__logo{
@@ -538,18 +537,152 @@ body{
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical; 
         font-family: @header-font;
-        font-size: 15px;
+        font-size: 13px;
         color: @text-color;
-        font-weight: 500px;
+        font-weight: 500;
         margin: 4px 0px;
+
+        @media @tablet {
+            font-size: 15px;
+        }
     }
 
     &__date{
         font-family: @header-font;
-        font-size: 13px;
+        font-size: 12px;
         color: #6b7282;
         font-weight: 500px;
         margin: 3px 0px;
+
+        @media @tablet {
+            font-size: 13px;
+        }
     }
 }
 /* notifications */
+
+/* calendar */
+
+.calendar{
+    &__wrap{
+        padding-top: 25px;
+        padding-bottom: 0px;
+        @media @tablet {
+            padding-top: 40px;
+            padding-bottom: 10px;
+        }
+    
+        @media @desktop {
+            padding-top: 50px;
+            padding-bottom: 10px;
+        } 
+    }
+
+    &__row{
+        margin-right: -0.25em;
+        margin-left: -0.25em;
+
+        &:first-child > .calendar__cell{
+            background-color: #1b1d24;
+        }
+    }
+
+    &__cell{
+        background-color: @block-color;
+        padding: 14px;
+        box-sizing: border-box;
+        border: 4px solid @bg-color;
+        border-radius: @border-radius;
+        overflow: hidden;
+
+        @media @desktop {
+            border-radius: 0px;
+        }
+
+        &_empty{
+            display: none;
+    
+            @media @desktop {
+                display: block;
+            }
+        }
+    }
+
+    &__date{
+        font-family: @header-font;
+        font-weight: 800;
+        font-size: 25px;
+        color: #6b7282;
+        margin: 15px 0px 10px 0px;
+        text-align: right;
+
+        // &:before{
+        //     content: '.';
+        //     color: @highlight-color_primary;
+        // }
+    }
+
+    &__text{
+        font-family: @header-font;
+        font-weight: 700;
+        font-size: 20px;
+        color: @text-color;
+
+        @media @tablet {
+            font-size: 22px;
+        }
+    
+        @media @desktop {
+            font-size: 24px;
+        }
+
+        &_highlight{
+            color: @highlight-color_primary;
+        }
+    }
+
+    &-item{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        padding: 5px 0px;
+
+        &__logo{
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+
+            @media @desktop {
+                width: 22px;
+                height: 22px;
+            }
+        }
+
+        &__content{
+            padding-left: 10px;
+
+            @media @desktop {
+                padding-left: 4px;
+            }
+        }
+
+        &__title{
+            font-family: @header-font;
+            font-size: 15px;
+            font-weight: 500;
+            color: @text-color;
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical; 
+            margin: 0px;
+
+            @media @desktop {
+                font-size: 13px;
+                -webkit-line-clamp: 1;
+                -webkit-box-orient: vertical; 
+            }
+        }
+    }
+}
+/* calendar */
