--- a/src/index.ejs
+++ b/src/index.ejs
@@ -112,7 +112,7 @@
     <!--JavaScript-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
-    <script src="js/main.js?v=<%= timestamp %>"></script>
+    <script src="js/main.min.js?v=<%= timestamp %>"></script>
     <!--JavaScript-->
 </body>
 </html>
