--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css?v=<%= timestamp %>" type="text/css">
+    <link rel="stylesheet" href="css/main.min.css?v=<%= timestamp %>" type="text/css">
     <!--CSS-->
 </head>
 <body>
