--- a/src/less/main.less
+++ b/src/less/main.less
@@ -200,6 +200,7 @@ body{
         } 
     }
     &-item{
+        position: relative;
         height: 100%;
         background-color: @block-color;
         box-sizing: border-box;
@@ -212,6 +213,44 @@ body{
     
         @media @desktop {
             padding: 30px;
+        }
+
+        &:hover .user-podcast-item__close{
+            opacity: 0.7;
+        }
+
+        &__header{
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            // align-items: center;
+            flex-direction: row;
+            padding: 5px 0;
+        }
+
+        &__close{
+            position: absolute;
+            top: 4px;
+            right: 4px;
+            background-color: transparent;
+            width: 28px;
+            height: 28px;
+            border: 1px solid @highlight-color_primary;
+            border-radius: 50%;
+            padding: 4px;
+            cursor: pointer;
+            outline: none;
+            opacity: 0;
+            transition:all 0.4s;
+
+            & svg {
+                display: block;
+                width: 100%;
+                height: 100%;
+                overflow: visible;
+                position: relative;
+                fill: @highlight-color_primary;
+            }
         }
 
         &__wrap{
@@ -267,9 +306,21 @@ body{
         }
 
         &__logo{
-            width: 100%;
+            align-self: center;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
             box-shadow: @box-shadow;
+
+            @media @desktop {
+                width: 82px;
+                height: 82px;
+            }
+        }
+
+        &__info{
+            padding-left: 15px;
+            align-self: center;
         }
     }
 }
@@ -305,6 +356,14 @@ body{
     
         @media @desktop {
             padding: 30px;
+        }
+
+        &__header{
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            flex-direction: row;
+            padding: 5px 0;
         }
 
         &__title{
@@ -376,9 +435,21 @@ body{
         }
 
         &__logo{
-            width: 100%;
+            align-self: center;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
             box-shadow: @box-shadow;
+
+            @media @desktop {
+                width: 82px;
+                height: 82px;
+            }
+        }
+
+        &__info{
+            padding-left: 15px;
+            align-self: center;
         }
 
         &__wrap{
@@ -598,6 +669,7 @@ body{
 
         @media @desktop {
             border-radius: 0px;
+            border: 2px solid @bg-color;
         }
 
         &_empty{
@@ -616,6 +688,10 @@ body{
         color: #6b7282;
         margin: 15px 0px 10px 0px;
         text-align: right;
+
+        &_current{
+            color: @highlight-color_primary;
+        }
 
         // &:before{
         //     content: '.';
@@ -659,13 +735,14 @@ body{
 
         &__logo{
             display: block;
+            align-self: center;
             width: 36px;
             height: 36px;
             border-radius: 50%;
 
             @media @desktop {
-                width: 20px;
-                height: 20px;
+                width: 21px;
+                height: 21px;
             }
         }
 
