--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta name="theme-color" content="#151720">
@@ -23,6 +24,7 @@
     <link rel="stylesheet" href="css/main.min.css?v=<%= timestamp %>" type="text/css">
     <!--CSS-->
 </head>
+
 <body>
     <header class="header">
         <div class="header__wrap wrap">
@@ -95,6 +97,38 @@
         </div>
     </section>
 
+    <!-- <section>
+        <div class="container wrap information__wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="podcast-app__title">
+                        Information
+                    </h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <p class="information__text">
+                        <i class='uil uil-microphone'></i>
+                        Total podcasts: <span class="js-total-podcasts information__quantity">9999999</span>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <p class="information__text">
+                        <i class='uil uil-database'></i>
+                        Total episodes in DB: <span class="js-total-podcasts information__quantity">9999999</span>
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <p class="information__text">
+                        <i class='uil uil-headphones-alt'></i>
+                        Total new episodes: <span class="js-total-podcasts information__quantity">9999999</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
     <footer class="footer">
         <div class="container wrap">
             <div class="row start-xs">
@@ -110,9 +144,12 @@
     <div class="notifications js-notifications">
     </div>
     <!--JavaScript-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
     <script src="js/main.min.js?v=<%= timestamp %>"></script>
     <!--JavaScript-->
+
 </body>
+
 </html>
