--- a/src/less/fontello.less
+++ b/src/less/fontello.less
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?55204878');
-  src: url('../font/fontello.eot?55204878#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?55204878') format('woff2'),
-       url('../font/fontello.woff?55204878') format('woff'),
-       url('../font/fontello.ttf?55204878') format('truetype'),
-       url('../font/fontello.svg?55204878#fontello') format('svg');
+  src: url('../font/fontello.eot?10318510');
+  src: url('../font/fontello.eot?10318510#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?10318510') format('woff2'),
+       url('../font/fontello.woff?10318510') format('woff'),
+       url('../font/fontello.ttf?10318510') format('truetype'),
+       url('../font/fontello.svg?10318510#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?55204878#fontello') format('svg');
+    src: url('../font/fontello.svg?10318510#fontello') format('svg');
   }
 }
 */
@@ -57,3 +57,5 @@
  
 .icon-globe:before { content: '\e800'; } /* '' */
 .icon-calendar:before { content: '\e801'; } /* '' */
+.icon-right-open:before { content: '\f006'; } /* '' */
+.icon-left-open:before { content: '\f007'; } /* '' */
