--- a/src/less/main.less
+++ b/src/less/main.less
@@ -74,16 +74,16 @@ body{
         font-family: @header-font;
         font-weight: 700;
         color: @text-color;
-        font-size: 24px;
+        font-size: 23px;
         margin: 25px 0px;
     
         @media @tablet {
-            font-size: 29px;
+            font-size: 28px;
             margin: 55px 0px;
         }
     
         @media @desktop {
-            font-size: 30px;
+            font-size: 29px;
         }
 
         &:after {
@@ -119,6 +119,12 @@ body{
     color: @highlight-color;
 }
 /* Plyr */
+
+.slick-slider, .slick-slide{
+    outline: none;
+}
+
+
 
 /* header */
 .header{
@@ -753,6 +759,16 @@ body{
                 display: block;
             }
         }
+    }
+
+    &__button{
+        background-color: transparent;
+        border: none;
+        outline: none;
+        padding: 15px 0px;
+        color: @highlight-color;
+        font-size: 22px;
+        cursor: pointer;
     }
 
     &__date{
