add podcast release chart

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2 class="podcast-app__title">
-                        My podcasts
+                        Мои подкасты
                     </h2>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2 class="podcast-app__title">
-                        Last podcast
+                        Последние эпизоды
                     </h2>
                 </div>
             </div>
@@ -88,20 +88,29 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2 class="podcast-app__title">
-                        Release calendar
+                        Календарь выхода эпизодов
                     </h2>
                 </div>
             </div>
-
-            <button data-month="1" data-year="0" class="calendar__button js-create-calndar-prev">
-                <i class="icon-left-open"></i>
-            </button>
-            <button data-month="1" data-year="0" class="calendar__button js-create-calndar-next">
-                <i class="icon-right-open"></i>
-            </button>
-
             <div class="js-calendar">
 
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container wrap chart__wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2 class="podcast-app__title">
+                        График выхода эпизодов
+                    </h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <canvas id="js-chart" width="800" height="410"></canvas>
+                </div>
             </div>
         </div>
     </section>
