--- a/src/index.ejs
+++ b/src/index.ejs
@@ -109,7 +109,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <canvas id="js-chart" width="800" height="410"></canvas>
+                    <canvas id="js-chart" width="100%" height="410"></canvas>
                 </div>
             </div>
         </div>
