--- a/src/less/main.less
+++ b/src/less/main.less
@@ -432,6 +432,18 @@ body{
             padding: 30px;
         }
 
+        &__play-bubble{
+            position: absolute;
+            z-index: 1000;
+            width: 12px;
+            height: 12px;
+            top: 10px;
+            left: 10px;
+            border-radius: 6px;
+            background-color: #21ba45;
+            animation: bubble_out .9s infinite ease-in-out both;
+        }
+
         &__header{
             display: -webkit-box;
             display: -ms-flexbox;
@@ -480,6 +492,7 @@ body{
 
         &__new-label{
             position: absolute;
+            z-index: 1000;
             right: 6px;
             top: 4px;
             border: 2px solid #21ba45;
@@ -767,7 +780,7 @@ body{
         background-color: transparent;
         border: none;
         outline: 0;
-        padding: 0px;
+        padding: 10px 0px;
         color: #fe1453;
         font-size: 24px;
         cursor: pointer;
@@ -894,3 +907,17 @@ body{
     }
 }
 /* chart */
+
+/* bubble_out animation */
+@-moz-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
+50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+}@-webkit-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
+50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+}@-o-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
+50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+}@-ms-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
+50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+}@keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
+50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+}
+/* bubble_out animation */
