--- a/src/less/main.less
+++ b/src/less/main.less
@@ -72,7 +72,7 @@ body{
         font-family: @header-font;
         font-weight: 700;
         color: @text-color;
-        font-size: 23px;
+        font-size: 21px;
         margin: 25px 0px;
     
         @media @tablet {
@@ -278,7 +278,7 @@ body{
         background-color: @block-color;
         box-sizing: border-box;
         border-radius: @border-radius;
-        padding: 20px;
+        padding: 18px;
 
         @media @tablet {
             padding: 25px;
@@ -340,7 +340,7 @@ body{
             font-weight: 700;
             color: @text-color;
             margin: 0px;
-            font-size: 17px;
+            font-size: 16px;
         
             @media @tablet {
                 font-size: 18px;
@@ -422,7 +422,7 @@ body{
         border-radius: @border-radius;
         box-sizing: border-box;
         margin-bottom: 15px;
-        padding: 20px;
+        padding: 18px;
 
         @media @tablet {
             padding: 25px;
@@ -461,7 +461,7 @@ body{
             font-weight: 700;
             color: @text-color;
             margin: 0px;
-            font-size: 17px;
+            font-size: 16px;
 
             @media @tablet {
                 font-size: 18px;
@@ -493,22 +493,12 @@ body{
         &__new-label{
             position: absolute;
             z-index: 1000;
-            right: 6px;
-            top: 4px;
-            border: 2px solid #21ba45;
+            width: 12px;
+            height: 12px;
+            top: 10px;
+            right: 10px;
             border-radius: 6px;
-            padding: 2px 10px;
-            color: #21ba45;
-            font-weight: 600;
-            font-size: 11px;
-            font-family: @text-font;
-            font-weight: 700;
-        
-            @media @tablet {
-                font-size: 12px;
-                right: 10px;
-                top: 10px;
-            }
+            background-color: #21ba45;
         }
 
         &__link{
@@ -792,7 +782,7 @@ body{
         font-family: @text-font;
         color: @text-color;
         font-weight: 700;
-        font-size: 14px;
+        font-size: 16px;
         margin: 0px;
         text-align: right;
 
@@ -909,15 +899,8 @@ body{
 /* chart */
 
 /* bubble_out animation */
-@-moz-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
-50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@-webkit-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
-50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@-o-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
-50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@-ms-keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
-50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
-}@keyframes bubble_out{0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
-50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
+@keyframes bubble_out{
+    0%,100%{-webkit-transform:scale(0.66);-moz-transform:scale(0.66);-ms-transform:scale(0.66);-o-transform:scale(0.66);transform:scale(0.66)}
+    50%{-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);transform:scale(1)}
 }
 /* bubble_out animation */
