--- a/src/index.ejs
+++ b/src/index.ejs
@@ -22,20 +22,21 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="css/main.min.css?v=<%= timestamp %>" type="text/css">
+    <link rel="stylesheet" href="css/main.min.css?pwacss=<%= timestamp %>" type="text/css">
     <!--CSS-->
 </head>
 
 <body>
     <header class="header">
         <div class="header__wrap wrap">
-            <div class="row middle-xs">
-                <div class="col-xs-6 start-xs ">
+            <div class="row middle-xs between-xs">
+                <div class="row middle-xs">
+                    <a class="header__menu-switcher" href="#" role="button" title="Меню"><span></span></a>
                     <h2 class="header__title">
                         Podcast Web App
                     </h2>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-3">
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="avatar__wrap">
@@ -134,7 +135,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/main.min.js?v=<%= timestamp %>"></script>
+    <script src="js/main.min.js?pwajs=<%= timestamp %>"></script>
     <!--JavaScript-->
 
 </body>
