✨ save current time for episode

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -30,6 +30,7 @@
 /* Fonts */
 @text-font: 'Basis Grotesque Pro Light', sans-serif;
 @header-font: 'Montserrat', sans-serif;
+@title-font: 'Basis Grotesque Pro', sans-serif;
 // @text-font: 'Roboto', sans-serif;
 /* Fonts */
 
@@ -400,7 +401,7 @@ body{
             overflow: hidden;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical; 
-            font-family: @header-font;
+            font-family: @title-font;
             font-weight: 700;
             color: @text-color;
             margin: 0px;
@@ -558,7 +559,7 @@ body{
             overflow: hidden;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical; 
-            font-family: @header-font;
+            font-family: @title-font;
             font-weight: 700;
             color: @text-color;
             margin: 0px;
