🔨 convert to ES6 modules

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" type="text/css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.4/plyr.css" type="text/css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" type="text/css"/>
     <link rel="stylesheet" href="css/main.min.css?pwacss=<%= timestamp %>" type="text/css">
     <!--CSS-->
 </head>
@@ -78,7 +78,7 @@
                     </h2>
                 </div>
             </div>
-            <div class="row top-xs js-last-podcast">
+            <div class="row top-xs js-new-episode">
 
             </div>
         </div>
@@ -131,11 +131,11 @@
     <div class="notifications js-notifications">
     </div>
     <!--JavaScript-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.2/plyr.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/main.min.js?pwajs=<%= timestamp %>"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.4/plyr.min.js" type="text/javascript"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" type="text/javascript"></script>
+    <script src="js/main.min.js?pwajs=<%= timestamp %>" type="text/javascript"></script>
     <!--JavaScript-->
 
 </body>
