--- a/src/less/main.less
+++ b/src/less/main.less
@@ -502,8 +502,8 @@ body{
 }
 /* user-podcast */
 
-/* last-podcast */
-.last-podcast{
+/* new-episode */
+.new-episode{
     &__wrap{
         padding-top: 25px;
         padding-bottom: 0px;
@@ -714,7 +714,7 @@ body{
         }
     }
 }
-/* last-podcast */
+/* new-episode */
 
 /* footer */
 .footer{
