--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,7 +19,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/plyr/3.5.4/plyr.css" type="text/css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" type="text/css"/>
     <link rel="stylesheet" href="css/main.min.css?pwacss=<%= timestamp %>" type="text/css">
@@ -55,32 +55,14 @@
     </header>
 
     <section>
-        <div class="container wrap user-podcast__wrap">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2 class="podcast-app__title">
-                        Мои подкасты
-                    </h2>
-                </div>
-            </div>
-            <div class="row js-podcast-list">
+        <div class="container wrap user-podcast__wrap js-podcast-list">
 
-            </div>
         </div>
     </section>
 
     <section>
-        <div class="container wrap last-podcast__wrap">
-            <div class="row">
-                <div class="col-xs-12">
-                    <h2 class="podcast-app__title">
-                        Последние эпизоды
-                    </h2>
-                </div>
-            </div>
-            <div class="row top-xs js-new-episode">
+        <div class="container wrap last-podcast__wrap js-new-episode">
 
-            </div>
         </div>
     </section>
 
