--- a/src/less/main.less
+++ b/src/less/main.less
@@ -796,7 +796,7 @@ body{
         overflow: hidden;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical; 
-        font-family: @header-font;
+        font-family: @title-font;
         font-size: 13px;
         color: @text-color;
         font-weight: 500;
@@ -850,7 +850,7 @@ body{
 
     &__cell{
         background-color: @block-color;
-        padding: 14px;
+        padding: 5px 15px;
         box-sizing: border-box;
         border: 4px solid @bg-color;
         border-radius: @border-radius;
@@ -904,8 +904,13 @@ body{
         font-weight: 800;
         font-size: 25px;
         color: #6b7282;
-        margin: 15px 0px 10px 0px;
+        margin: 5px 0px;
         text-align: right;
+
+
+        @media @tablet {
+            margin: 15px 0px 10px 0px;
+        }
 
         &_current{
             color: @highlight-color;
@@ -949,8 +954,8 @@ body{
         &__logo{
             display: block;
             align-self: center;
-            width: 30px;
-            height: 30px;
+            width: 25px;
+            height: 25px;
             border-radius: 50%;
 
             @media @desktop {
@@ -969,7 +974,7 @@ body{
 
         &__title{
             font-family: @text-font;
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 700;
             color: @text-color;
             display: -webkit-box;
